--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,7 +7,7 @@
  */
 $darkgray: #343434;
 $nottoodarkgray: rgba(255, 255, 255, 0.51);
-$maingray: #595959;
+$maingray: #4d4c4c;
 $mainbackground: #f2f2f2;
 $firstgray: #dbdbdb;
 $secondlevel: #bdbdbd;
